# opn-mcp

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent-framework.toml  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: ci.yml  claude-review.yml
docs/: MONITORING.md  architecture.md  glossary.md
docs/adr/: 0001-stateless-mcp-proxy-over-opnsense-rest-api.md  0002-credential-and-transport-security-posture.md  0003-single-curated-write-tool-with-anti-lockout-refusal.md  0004-runtime-dependencies-and-packaging.md  0005-tls-verification-on-by-default.md  0006-structural-anti-lockout-guard.md  0007-stdio-only-transport.md  0008-single-source-scheduled-task-prompts.md  0009-license-under-mit.md  0010-http2-for-the-opnsense-api-client.md  README.md
docs/reviews/: pr13_adversarial_review.md  pr14_adversarial_review.md  pr15_adversarial_review.md  pr16_adversarial_review.md
docs/scheduled-tasks/: daily-summary.md  security-check.md
scheduled-tasks/opnsense-daily-summary/: SKILL.md
scheduled-tasks/opnsense-security-check/: SKILL.md
scripts/: check_spec_coverage.py  cleanup-stale-scheduled-tasks.sh  com.opnsense-mcp.cleanup.plist
specs/digest-coverage/: spec.md  tasks.md
specs/security-posture-hardening/: plan.md  spec.md  tasks.md
tests/: conftest.py  test_config.py  test_harness.py  test_http2.py  test_security_digest.py  test_tls.py  test_toggle_guard.py  test_transport.py  test_updates_available.py
